--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,9 @@ add_executable(client ${client_sources})
 file(GLOB fingers_sources "getfingers/*.c")
 add_executable(getfingers ${fingers_sources})
 
+file(GLOB gen_conf_same_sources "gen_conf_same/*.c")
+add_executable(gen_conf_same ${gen_conf_same_sources})
+
 target_link_libraries(client chord)
 target_link_libraries(getfingers chord)
+target_link_libraries(gen_conf_same chord)
