Use a single static EventQueue, added a bunch of DHash packet processing, converted DHash client to C++.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_C_FLAGS "-ggdb -fdump-rtl-expand")
 add_library(chord SHARED ${lib_sources})
 target_link_libraries(chord ${OPENSSL_LIBRARIES} dl)
 
-file(GLOB client_sources "client/*.c")
+file(GLOB client_sources "client/*.cpp")
 add_executable(client ${client_sources})
 
 file(GLOB fingers_sources "getfingers/*.c")
@@ -23,5 +23,7 @@ file(GLOB gen_conf_same_sources "gen_conf_same/*.c")
 add_executable(gen_conf_same ${gen_conf_same_sources})
 
 target_link_libraries(client chord)
+target_link_libraries(client udt)
+target_link_libraries(client pthread)
 target_link_libraries(getfingers chord)
 target_link_libraries(gen_conf_same chord)
