--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ target_link_libraries(chord ${OPENSSL_LIBRARIES} dl)
 file(GLOB client_sources "client/*.cpp")
 add_executable(client ${client_sources})
 
-file(GLOB fingers_sources "getfingers/*.c")
-add_executable(getfingers ${fingers_sources})
+#file(GLOB fingers_sources "getfingers/*.c")
+#add_executable(getfingers ${fingers_sources})
 
 file(GLOB gen_conf_same_sources "gen_conf_same/*.c")
 add_executable(gen_conf_same ${gen_conf_same_sources})
@@ -25,5 +25,5 @@ add_executable(gen_conf_same ${gen_conf_same_sources})
 target_link_libraries(client chord)
 target_link_libraries(client udt)
 target_link_libraries(client pthread)
-target_link_libraries(getfingers chord)
+#target_link_libraries(getfingers chord)
 target_link_libraries(gen_conf_same chord)
