Converted Chord messaging to protocol buffers; hopefully this turns out to be a good decision. Got tired of rewriting the packing functions, and Google can probably do it better than I can.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,15 @@ project(Chord)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 set(CMAKE_INCLUDE_CURRENT_DIR on)
 
+file(GLOB PROTOBUF_C_MESSAGES "*.proto")
+
+find_package(ProtobufC REQUIRED)
+include_directories(${PROTOBUF_C_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
+PROTOBUF_C_GENERATE_C(PROTO_C_SRCS PROTO_C_HDRS ${PROTOBUF_C_MESSAGES})
+
 file(GLOB lib_sources "*.c" "*.h")
+list(APPEND lib_sources ${PROTO_C_SRCS} ${PROTO_C_HDRS})
 
 find_package(OpenSSL)
 include_directories(${OPENSSL_INCLUDE_DIR})
@@ -15,7 +23,7 @@ find_package(LibEvent)
 include_directories(${LIBEVENT_INCLUDE_DIR})
 
 add_library(chord SHARED ${lib_sources})
-target_link_libraries(chord ${OPENSSL_LIBRARIES} ${LIBEVENT_LIBRARIES} dl m)
+target_link_libraries(chord ${OPENSSL_LIBRARIES} ${LIBEVENT_LIBRARIES} ${PROTOBUF_C_LIBRARY} dl m)
 
 file(GLOB client_sources "client/*.cpp" "client/*.h")
 add_executable(client ${client_sources})
