Finished header refactoring; started tracking files generated by protobuf-c to avoid requiring the package while compiling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,18 @@ file(GLOB PROTOBUF_C_CLIENT_MESSAGES "client/*.proto")
 find_package(ProtobufC REQUIRED)
 include_directories(${PROTOBUF_C_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories("include/")
 include_directories("src/")
 PROTOBUF_C_GENERATE_C(PROTO_C_CHORD_SRCS PROTO_C_CHORD_HDRS ${PROTOBUF_C_CHORD_MESSAGES})
 PROTOBUF_C_GENERATE_C(PROTO_C_CLIENT_SRCS PROTO_C_CLIENT_HDRS ${PROTOBUF_C_CLIENT_MESSAGES})
+message(${CMAKE_CURRENT_BINARY_DIR})
+message(${CMAKE_CURRENT_SOURCE_DIR})
+add_custom_command(
+    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/include/chord/messages.pb-c.h
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/src/messages.pb-c.h ${CMAKE_CURRENT_SOURCE_DIR}/include/chord/messages.pb-c.h
+    MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/src/messages.pb-c.h)
 
-file(GLOB lib_sources "src/*.c" "src/*.h" "src/logger/*.c" "src/logger/*.h")
+file(GLOB lib_sources "src/*.c" "src/*.h" "include/*.h" "src/logger/*.c" "src/logger/*.h")
 list(APPEND lib_sources ${PROTO_C_CHORD_SRCS} ${PROTO_C_CHORD_HDRS})
 
 find_package(OpenSSL)
