Broke client out into simple_client and file_client; don't call evthread_use_pthreads() in simple_client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_BUILD_TYPE Debug)
 # PROTOBUF
 ######################
 file(GLOB PROTOBUF_C_CHORD_MESSAGES "src/*.proto")
-file(GLOB PROTOBUF_C_CLIENT_MESSAGES "client/*.proto")
+file(GLOB PROTOBUF_C_FILE_CLIENT_MESSAGES "file_client/*.proto")
 
 find_package(ProtobufC REQUIRED)
 include_directories(${PROTOBUF_C_INCLUDE_DIRS})
@@ -21,7 +21,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories("include/")
 include_directories("src/")
 PROTOBUF_C_GENERATE_C(PROTO_C_CHORD_SRCS PROTO_C_CHORD_HDRS ${PROTOBUF_C_CHORD_MESSAGES})
-PROTOBUF_C_GENERATE_C(PROTO_C_CLIENT_SRCS PROTO_C_CLIENT_HDRS ${PROTOBUF_C_CLIENT_MESSAGES})
+PROTOBUF_C_GENERATE_C(PROTO_C_CLIENT_SRCS PROTO_C_CLIENT_HDRS ${PROTOBUF_C_FILE_CLIENT_MESSAGES})
 
 add_custom_command(
     OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/include/chord/messages.pb-c.h
@@ -48,14 +48,22 @@ add_library(chord SHARED ${lib_sources})
 target_link_libraries(chord ${OPENSSL_LIBRARIES} ${LIBEVENT_LIBRARIES} ${PROTOBUF_C_LIBRARY} dl m confuse)
 
 ######################
-# DHASH CLIENT
+# SIMPLE CLIENT
 ######################
-file(GLOB client_sources "client/*.cpp" "client/*.h")
-list(APPEND client_sources ${PROTO_C_CLIENT_SRCS} ${PROTO_C_CLIENT_HDRS})
-add_executable(client ${client_sources})
-target_link_libraries(client chord)
-target_link_libraries(client udt)
-target_link_libraries(client pthread)
+file(GLOB simple_client_sources "simple_client/*.c" "simple_client/*.h")
+add_executable(simple_client ${simple_client_sources})
+target_link_libraries(simple_client chord)
+target_link_libraries(simple_client pthread)
+
+######################
+# FILE CLIENT
+######################
+file(GLOB file_client_sources "file_client/*.cpp" "file_client/*.h")
+list(APPEND file_client_sources ${PROTO_C_CLIENT_SRCS} ${PROTO_C_CLIENT_HDRS})
+add_executable(file_client ${file_client_sources})
+target_link_libraries(file_client chord)
+target_link_libraries(file_client udt)
+target_link_libraries(file_client pthread)
 
 ######################
 # UTILITIES
